--- a/shelter/css/styles.css
+++ b/shelter/css/styles.css
@@ -25,23 +25,7 @@ h2 {
   text-align: center;
 }
 
-@media screen and (max-width: 1080px) {
-  .column {
-    width: 300px;
-    float: left;
-    padding: 20px;
-  }
-}
-
-@media screen and (max-width: 950px) {
-  body {
-    background-color: black;
-    color: white;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  body {
-    background-color: teal;
-  }
+.container {
+  display: flex;
+  flex-direction: : column;
 }
